# Zcash-invoicing

./: .gitignore  README.md  package.json
app/: layout.tsx
app/(app)/auditor/: page.tsx
app/(app)/compliance/: page.tsx
app/(app)/disclosure/: page.tsx
app/(app)/invoices/[id]/: page.tsx
app/(app)/invoices/new/: page.tsx
app/(app)/profile/: page.tsx
app/(app)/settings/: page.tsx
backend/: .env.example  Cargo.toml  build.rs
backend/migrations/: 001_initial.sql  002_multi_tenant.sql
backend/proto/: service.proto
backend/src/: api.rs  auth.rs  db.rs  error.rs  grpc.rs  main.rs  seed.rs  state.rs  types.rs  wallet.rs  worker.rs
components/: AppShell.tsx  BusinessMenu.tsx  CopyButton.tsx
components/compliance/: SharePanel.tsx  VerifyPanel.tsx
frontend/: package-lock.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/auditor/[packId]/: page.tsx
frontend/app/(app)/customers/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/invoices/: page.tsx
frontend/app/(app)/invoices/[id]/: page.tsx
frontend/app/(app)/invoices/new/: page.tsx
frontend/app/(app)/reveal/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AppShell.tsx  BusinessMenu.tsx  Logo.tsx  PageHeader.tsx  StatusBadge.tsx
frontend/components/compliance/: PrivacyPanel.tsx  SharePanel.tsx  VerifyPanel.tsx
frontend/components/ui/: badge.tsx  button-variants.ts  button.tsx  input.tsx  select.tsx  table.tsx
frontend/lib/: api.ts  brand.ts  types.ts  useZcash.ts  utils.ts  zcashService.ts
lib/: types.ts  useZcash.ts  zcashService.ts
